Make sure this work in latest version of MicroProfile Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>